--- a/BootstrapLandinPage/style.css
+++ b/BootstrapLandinPage/style.css
@@ -1,7 +1,6 @@
 body{
     background-color: #333;
-    color: #fff;
-    
+    color: #fff;   
 }
 
 nav{
@@ -20,6 +19,16 @@ nav{
 .card{
     background-color: cadetblue;
 }
+
+.dark-overlay{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .7);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 .home-inner{
     padding-top: 100px;
 }
