--- a/BootstrapLandinPage/style.css
+++ b/BootstrapLandinPage/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 nav{
-    border-bottom: cadetblue 3px solid;
+    border-bottom: rgb(31, 73, 102) solid;
     opacity: .7;
 }
 
@@ -15,20 +15,32 @@ nav{
  background-attachment: fixed;
 
 }
+.info-section{
+    padding-bottom: 10px;
+    background-color: rgb(31, 73, 102);
+}
 
 .card{
     background-color: cadetblue;
 }
 
 .dark-overlay{
-    width: 100%;
-    height: 100%;
     background-color: rgba(0, 0, 0, .7);
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    min-width: 100%;
+    height: 100%;
 }
 
 .home-inner{
-    padding-top: 100px;
+    padding-top: 150px;
+}
+
+@media (max-widht: 992px){
+    .home-inner{
+        padding-top: 100px ;
+    }
+
 }
